--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -262,6 +262,8 @@
     <Compile Include="Maps\ZSJM\ZSJM_TSJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_WLFWJBXX_Map.cs" />
     <Compile Include="Maps\ZSJM\ZSJM_WTMYETJBXX_Map.cs" />
+    <Compile Include="Maps\ZXJC\ZXJC_FWGZJBXX_Map.cs" />
+    <Compile Include="Maps\ZXJC\ZXJC_GZFWJBXX_Map.cs" />
     <Compile Include="Maps\ZXJC\ZXJC_JZFWJBXX_Map.cs" />
     <Compile Include="Models\CL\CL_GCCJBXX.cs" />
     <Compile Include="Models\CL\CL_HCJBXX.cs" />
@@ -474,6 +476,8 @@
     <Compile Include="Models\ZSJM\ZSJM_TSJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_WLFWJBXX.cs" />
     <Compile Include="Models\ZSJM\ZSJM_WTMYETJBXX.cs" />
+    <Compile Include="Models\ZXJC\ZXJC_FWGZJBXX.cs" />
+    <Compile Include="Models\ZXJC\ZXJC_GZFWJBXX.cs" />
     <Compile Include="Models\ZXJC\ZXJC_JZFWJBXX.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
