--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -240,6 +240,8 @@
     <Compile Include="BLL\ZSJM\ZSJM_TSBLL.cs" />
     <Compile Include="BLL\ZSJM\ZSJM_WLFWBLL.cs" />
     <Compile Include="BLL\ZSJM\ZSJM_WTMYETBLL.cs" />
+    <Compile Include="BLL\ZXJC\ZXJC_FWGZBLL.cs" />
+    <Compile Include="BLL\ZXJC\ZXJC_GZFWBLL.cs" />
     <Compile Include="BLL\ZXJC\ZXJC_JZFWBLL.cs" />
     <Compile Include="DAO\DAOBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
