--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -239,6 +239,8 @@
     <Compile Include="ZSJM\IZSJM_WTMYETBLL.cs" />
     <Compile Include="ZXJC\IZXJC_FWGZBLL.cs" />
     <Compile Include="ZXJC\IZXJC_GZFWBLL.cs" />
+    <Compile Include="ZXJC\IZXJC_JCBLL.cs" />
+    <Compile Include="ZXJC\IZXJC_JJBLL.cs" />
     <Compile Include="ZXJC\IZXJC_JZFWBLL.cs" />
   </ItemGroup>
   <ItemGroup>
