--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -481,6 +481,8 @@
     <Content Include="Areas\Business\Css\ZSJM\ZSJM_WTMYET.css" />
     <Content Include="Areas\Business\Css\ZXJC\ZXJC_FWGZ.css" />
     <Content Include="Areas\Business\Css\ZXJC\ZXJC_GZFW.css" />
+    <Content Include="Areas\Business\Css\ZXJC\ZXJC_JC.css" />
+    <Content Include="Areas\Business\Css\ZXJC\ZXJC_JJ.css" />
     <Content Include="Areas\Business\Css\ZXJC\ZXJC_JZFW.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.min.css" />
@@ -893,6 +895,10 @@
     <Content Include="Areas\Business\Scripts\Business\ZXJC\ZXJC_FWGZYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ZXJC\ZXJC_GZFW.js" />
     <Content Include="Areas\Business\Scripts\Business\ZXJC\ZXJC_GZFWYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\ZXJC\ZXJC_JC.js" />
+    <Content Include="Areas\Business\Scripts\Business\ZXJC\ZXJC_JCYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\ZXJC\ZXJC_JJ.js" />
+    <Content Include="Areas\Business\Scripts\Business\ZXJC\ZXJC_JJYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ZXJC\ZXJC_JZFW.js" />
     <Content Include="Areas\Business\Scripts\Business\ZXJC\ZXJC_JZFWYZ.js" />
     <Content Include="Areas\Business\Scripts\jquery-1.9.1.min.js" />
@@ -1455,6 +1461,8 @@
     <Compile Include="Areas\Business\Controllers\ZSJM\ZSJM_WTMYETController.cs" />
     <Compile Include="Areas\Business\Controllers\ZXJC\ZXJC_FWGZController.cs" />
     <Compile Include="Areas\Business\Controllers\ZXJC\ZXJC_GZFWController.cs" />
+    <Compile Include="Areas\Business\Controllers\ZXJC\ZXJC_JCController.cs" />
+    <Compile Include="Areas\Business\Controllers\ZXJC\ZXJC_JJController.cs" />
     <Compile Include="Areas\Business\Controllers\ZXJC\ZXJC_JZFWController.cs" />
     <Compile Include="Areas\Business\Scripts\UEditor\net\App_Code\Config.cs" />
     <Compile Include="Areas\Business\Scripts\UEditor\net\App_Code\ConfigHandler.cs" />
@@ -1734,6 +1742,8 @@
     <Content Include="Areas\Business\Views\ZXJC_JZFW\ZXJC_JZFW.cshtml" />
     <Content Include="Areas\Business\Views\ZXJC_GZFW\ZXJC_GZFW.cshtml" />
     <Content Include="Areas\Business\Views\ZXJC_FWGZ\ZXJC_FWGZ.cshtml" />
+    <Content Include="Areas\Business\Views\ZXJC_JC\ZXJC_JC.cshtml" />
+    <Content Include="Areas\Business\Views\ZXJC_JJ\ZXJC_JJ.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
