--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -242,6 +242,8 @@
     <Compile Include="BLL\ZSJM\ZSJM_WTMYETBLL.cs" />
     <Compile Include="BLL\ZXJC\ZXJC_FWGZBLL.cs" />
     <Compile Include="BLL\ZXJC\ZXJC_GZFWBLL.cs" />
+    <Compile Include="BLL\ZXJC\ZXJC_JCBLL.cs" />
+    <Compile Include="BLL\ZXJC\ZXJC_JJBLL.cs" />
     <Compile Include="BLL\ZXJC\ZXJC_JZFWBLL.cs" />
     <Compile Include="DAO\DAOBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
