--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Maps\CODES\CODES_ES_SJSM_Map.cs" />
     <Compile Include="Maps\CODES\CODES_ES_QTES_Map.cs" />
     <Compile Include="Maps\CODES\CODES_ES_WHYL_Map.cs" />
+    <Compile Include="Maps\CODES\CODES_HQSY_Map.cs" />
     <Compile Include="Maps\CODES\CODES_JYPX_Map.cs" />
     <Compile Include="Maps\CODES\CODES_JYPX_XX_Map.cs" />
     <Compile Include="Maps\CODES\CODES_LR_Map.cs" />
@@ -116,6 +117,7 @@
     <Compile Include="Maps\FC\FC_SPJBXX_Map.cs" />
     <Compile Include="Maps\FC\FC_XZLJBXX_Map.cs" />
     <Compile Include="Maps\FWCZJBXX_Map.cs" />
+    <Compile Include="Maps\HQSY\HQSY_HQGSJBXX_Map.cs" />
     <Compile Include="Maps\JCXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_GLPXJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_ITPXJBXX_Map.cs" />
@@ -283,6 +285,7 @@
     <Compile Include="Models\CODES\CODES_ES_SJSM.cs" />
     <Compile Include="Models\CODES\CODES_ES_QTES.cs" />
     <Compile Include="Models\CODES\CODES_ES_WHYL.cs" />
+    <Compile Include="Models\CODES\CODES_HQSY.cs" />
     <Compile Include="Models\CODES\CODES_JYPX.cs" />
     <Compile Include="Models\CODES\CODES_JYPX_XX.cs" />
     <Compile Include="Models\CODES\CODES_LR.cs" />
@@ -332,6 +335,7 @@
     <Compile Include="Models\FC\FC_SPJBXX.cs" />
     <Compile Include="Models\FC\FC_XZLJBXX.cs" />
     <Compile Include="Models\FC\FC_ZZFJBXX.cs" />
+    <Compile Include="Models\HQSY\HQSY_HQGSJBXX.cs" />
     <Compile Include="Models\JCXX.cs" />
     <Compile Include="Models\JYPX\JYPX_GLPXJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_ITPXJBXX.cs" />
