--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CY\ICY_KCTSBLL.cs" />
     <Compile Include="CY\ICY_MSBLL.cs" />
     <Compile Include="CY\ICY_WMBLL.cs" />
+    <Compile Include="HQSY\IHQSY_HQGSBLL.cs" />
     <Compile Include="IBaseBLL.cs" />
     <Compile Include="IBZZXBLL.cs" />
     <Compile Include="CL\ICL_GCCBLL.cs" />
