--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Maps\FWCZJBXX_Map.cs" />
     <Compile Include="Maps\HQSY\HQSY_HCZLJBXX_Map.cs" />
     <Compile Include="Maps\HQSY\HQSY_HQGSJBXX_Map.cs" />
+    <Compile Include="Maps\HQSY\HQSY_HYJDJBXX_Map.cs" />
     <Compile Include="Maps\JCXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_GLPXJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_ITPXJBXX_Map.cs" />
@@ -338,6 +339,7 @@
     <Compile Include="Models\FC\FC_ZZFJBXX.cs" />
     <Compile Include="Models\HQSY\HQSY_HCZLJBXX.cs" />
     <Compile Include="Models\HQSY\HQSY_HQGSJBXX.cs" />
+    <Compile Include="Models\HQSY\HQSY_HYJDJBXX.cs" />
     <Compile Include="Models\JCXX.cs" />
     <Compile Include="Models\JYPX\JYPX_GLPXJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_ITPXJBXX.cs" />
