--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Maps\FC\FC_SPJBXX_Map.cs" />
     <Compile Include="Maps\FC\FC_XZLJBXX_Map.cs" />
     <Compile Include="Maps\FWCZJBXX_Map.cs" />
+    <Compile Include="Maps\HQSY\HQSY_CZZXJBXX_Map.cs" />
     <Compile Include="Maps\HQSY\HQSY_HCZLJBXX_Map.cs" />
     <Compile Include="Maps\HQSY\HQSY_HQGSJBXX_Map.cs" />
     <Compile Include="Maps\HQSY\HQSY_HYJDJBXX_Map.cs" />
@@ -337,6 +338,7 @@
     <Compile Include="Models\FC\FC_SPJBXX.cs" />
     <Compile Include="Models\FC\FC_XZLJBXX.cs" />
     <Compile Include="Models\FC\FC_ZZFJBXX.cs" />
+    <Compile Include="Models\HQSY\HQSY_CZZXJBXX.cs" />
     <Compile Include="Models\HQSY\HQSY_HCZLJBXX.cs" />
     <Compile Include="Models\HQSY\HQSY_HQGSJBXX.cs" />
     <Compile Include="Models\HQSY\HQSY_HYJDJBXX.cs" />
