--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -51,6 +51,7 @@
     <Compile Include="CY\ICY_WMBLL.cs" />
     <Compile Include="HQSY\IHQSY_CZZXBLL.cs" />
     <Compile Include="HQSY\IHQSY_HCZLBLL.cs" />
+    <Compile Include="HQSY\IHQSY_HLGPBLL.cs" />
     <Compile Include="HQSY\IHQSY_HQGSBLL.cs" />
     <Compile Include="HQSY\IHQSY_HQYPBLL.cs" />
     <Compile Include="HQSY\IHQSY_HYJDBLL.cs" />
