--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -54,6 +54,7 @@
     <Compile Include="HQSY\IHQSY_HLGPBLL.cs" />
     <Compile Include="HQSY\IHQSY_HQGSBLL.cs" />
     <Compile Include="HQSY\IHQSY_HQYPBLL.cs" />
+    <Compile Include="HQSY\IHQSY_HSLFBLL.cs" />
     <Compile Include="HQSY\IHQSY_HYJDBLL.cs" />
     <Compile Include="HQSY\IHQSY_SYBLL.cs" />
     <Compile Include="IBaseBLL.cs" />
